updates to html and css

--- a/cover.html
+++ b/cover.html
@@ -8,10 +8,19 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="style.css" rel="stylesheet"/>
+  <style>
+      /* video{ */
+          /* width: auto; */
+          /* height: auto; */
+          /* background: url(/home/conrad/Downloads/Magical_Tree_4K_Living_Background.mp4) no-repeat; */
+          /* background-size: cover; */
+      /* } */
+  </style>
 </head>
 
 <body>
 <!--navigation-->
+<div>
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -23,7 +32,7 @@
                     <span class="icon-bar"></span>
                 </button>
             </div>
-                <a class="navbar-brand" href="#"><img src="<#>"></a>
+                <a class="navbar-brand" href="http://cradical.wixsite.com/conradwright" target="_blank"><img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/34482013_10160746625245160_4957296444689088512_o.jpg?_nc_cat=0&oh=adb243f14bbec7405f8b952a87daf286&oe=5BADA487" id="avatar" atl="avatar"></a>
             <div class="collapse navbar-collapse" id="navbar-collapse-main">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a class="active" href="">Home</a></li>
@@ -32,26 +41,88 @@
                     <li><a href="">Testimonials</a></li>
                 </ul>
             </div>
-
-
         </div>
     </nav>
-
+</div>
+<!-- <br> -->
     <div id="home">
         <div class="landing-text">
             <h1>Conrad Wright</h1>
             <h3>Web Development Immersion</h3>
             <h4>Learn. Grow. Lead. Impact.</h4>
             <a href="" class="btn btn-default btn-lg">Learn More</a>
-            <h6>Creatively Radical</h6>
+            <h5>Creatively Radical</h5>
         </div>
+        <!-- <video src="/home/conrad/Downloads/Magical_Tree_4K_Living_Background.mp4" id="bgvid" autoplay loop></video> -->
 
     </div>
+<!--overview section-->
+    <div class="padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md col-sm-6 col-xs-12">
+                    <h4>About.Me</h4>        
+                    <p>insert text here</p>            
+                </div>
+                <div class="col-lg-3 col-md col-sm-6 col-xs-12">
+                    <h4>Blog</h4>
+                    <p>insert text here</p>
+                </div>
+                <div class="col-lg-3 col-md col-sm-6 col-xs-12">
+                    <h4>Testimonials</h4>
+                    <p>insert text here</p>
+                </div>
+                <div class="col-lg-3 col-md col-sm-6 col-xs-12">
+                    <h4>Vision for my future</h4>
+                    <p>Insert text here</p>        
+                </div>
+                <div class="col-sm-6">
+                    <img src="" alt="">
+                    <h2>Image Goes Here</h2>
+                </div>
+                <div class="col-sm-6 text-center">
+                    <h2>Text goes here</h2>
+                    <p class="lead">Information about text title goes here </p> 
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div id="fixed"
+    ></div>
 
+    <div class="padding">
+            <div class="container">
+                <div class="row">
+                   <div class="col-sm-6">
+                        <img src="" alt="">
+                        <h2>Current Pursuits</h2>
+                        <p>Insert text here</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <h2>Text goes here</h2>
+                        <p>Insert text here</p> 
+                    </div>
+                </div>
+            </div>
+    </div>
 
-
-
+    <!--footer-->
+    <footer class="container-fluid text-center"></footer>
+        <div class="row"></div>
+            <div class="col-sm-4">
+                <h3>Conact Me</h3>
+                <br>
+                <h4>email address</h4>
+            </div>
+            <div class="col-sm-4">
+                <h3>Connect with Me on Social Media</h3>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-instagram"></a>
+            </div>
+           
 
 
 <!--- iOS Landing Page Fix
@@ -79,3 +150,34 @@
 
 </body>
 </html>
+
+<!-- min: 34
+Portfolio site – things to include:
+
+- logo
+- relevant skills
+- education/certificates
+- job history
+- downloadable resumer
+- bio page
+- photo
+- contact info
+- social media links
+- specialty or focus area
+- testimonials
+- awards and recognition
+- a blog
+- videos
+- project display
+- volunteer work
+- git hub
+- quantifiable achievements
+- leadership experiences
+- speaking/presentation
+- links to websites
+
+
+designs considerations:
+- theme
+- icons
+- colors, fonts-->
