external links added

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <a class="navbar-brand" href="http://cradical.wixsite.com/conradwright" target="_blank"><img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/34482013_10160746625245160_4957296444689088512_o.jpg?_nc_cat=0&oh=adb243f14bbec7405f8b952a87daf286&oe=5BADA487" id="avatar" atl="avatar"></a>
             <div class="collapse navbar-collapse" id="navbar-collapse-main">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a class="active" href="">Home</a></li>
-                    <li><a href="">About Me</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="http://cradical.wixsite.com/conradwright/conrad-wright" target="_blank">About Me</a></li>
+                    <li><a href="https://www.socialenterpriseresources.com/blog" target="_blank">Blog</a></li>
                     <li><a href="">Testimonials</a></li>
                 </ul>
             </div>
